==> frank26080115/robots/misc/esp32-rc-radio/libraries/Esp32RcRadio/Esp32RcRadio.cpp <==
#include "Esp32RcRadio.h"
#include <esp_wifi.h>
#include <esp_wifi_types.h>
#include <esp_system.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

void Esp32RcRadio::var_reset(void)
{
    _stat_tmr_1 = 0;
    _stat_tmr_2 = 0;
    _stat_cnt_1 = 0;
    _stat_cnt_2 = 0;
    _stat_drate_1 = 0;
    _stat_drate_2 = 0;
    _stat_rx_total = 0;
    _stat_rx_good = 0;
    _last_time = 0;
    _timeout_cnt = 0;
    _cur_chan = 0;
    _last_chan = -1;
    rx_flag = false;
}

void Esp32RcRadio::begin(uint16_t chan_map, uint32_t uid, uint32_t salt)
{
    instance = (Esp32RcRadio*)this;
    var_reset();
    _chan_map = chan_map & 0x3FFF;
    _chan_map = _chan_map == 0 ? E32RCRAD_CHAN_MAP_DEFAULT : _chan_map;
    _uid = uid;
    _salt = salt;

    // generate hop table, fill table with an entry if the bit of the map bitmask is set
    int i, j;
    for (i = 0, j = 0; i < 14; i++)
    {
        if ((_chan_map & (1 << i)) != 0) {
            hop_table[j] = i + 1;
            hop_table[j + 1] = 0;
            j++;
            hop_tbl_len = j;
        }
    }
    if (_salt != 0)
    {
        uint32_t old_rand = rand();
        srand(_salt);
        // shuffle the table according to our salt
        // this prevents jamming by following a known hop sequence
        for (i = 0; i < hop_tbl_len - 1; i++)
        {
            j = i + rand() / (RAND_MAX / (hop_tbl_len - i) + 1);
            uint8_t t = hop_table[j];
            hop_table[j] = hop_table[i];
            hop_table[i] = t;
        }
        srand(old_rand); // remove our salt
    }
    #ifdef E32RCRAD_DEBUG_HOPTABLE
    Serial.printf("Hop Table: ");
    for (i = 0; i < hop_tbl_len; i++) {
        Serial.printf("%d  ", hop_table[i]);
    }
    #endif

    if (has_wifi_init == false) // only start once
    {
        has_wifi_init = true;
        //esp_netif_init();
        //esp_event_loop_create_default();
        //esp_netif_create_default_wifi_ap();
        wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
        esp_wifi_init(&cfg);
        esp_wifi_set_mode(WIFI_MODE_AP);
        wifi_config_t ap_config = {
            .ap = {
                .ssid = {0},
                .password = {0},
                .ssid_len = 0,
                .channel = hop_table[_cur_chan % hop_tbl_len],
                .authmode = WIFI_AUTH_WPA2_PSK,
                .ssid_hidden = 1,
                .max_connection = 4,
                .beacon_interval = 60000
            }
        };

        esp_wifi_set_config(WIFI_IF_AP, &ap_config);
        //esp_wifi_config_80211_tx_rate(WIFI_IF_AP, WIFI_PHY_RATE_1M_L); // sets PHY rate
        esp_wifi_start();
        esp_wifi_set_ps(WIFI_PS_NONE);
        gen_header();
    }
    else
    {
        next_chan();
    }

    if (_is_tx == false)
    {
        start_listener();
    }
}

void Esp32RcRadio::send(uint8_t* data, bool immediate)
{
    memcpy(buffer, data, E32RCRAD_PAYLOAD_SIZE);
    if (immediate) {
        tx();
    }
}

void Esp32RcRadio::next_chan(void)
{
    _cur_chan++;
    _cur_chan %= hop_tbl_len;
    uint8_t nchan = hop_table[_cur_chan];
    if (nchan != _last_chan) // prevent wasting time changing to the same channel
    {
        if (_is_tx == false) {
            esp_wifi_set_promiscuous(false);
        }
        int retries;
        for (retries = 100; retries > 0; retries--)
        {
            if (esp_wifi_set_channel(nchan, WIFI_SECOND_CHAN_NONE) == ESP_OK)
            {
                uint8_t x;
                wifi_second_chan_t x2;
                if (esp_wifi_get_channel(&x, &x2) == ESP_OK) {
                    if (x == nchan) {
                        break;
                    }
                }
            }
        }
        if (_is_tx == false) {
            start_listener();
        }
        _last_chan = nchan;
    }
    gen_header();
}

void Esp32RcRadio::gen_header(void)
{
    uint8_t c = hop_table[_cur_chan];
    e32rcrad_pkt_t* ptr = (e32rcrad_pkt_t*)frame_buffer;
    //ptr->frame_ctrl = 0x0094; // block ack
    ptr->frame_ctrl = 0x0040; // probe request
    ptr->duration = 0;
    ptr->padding[0] = 0;
    ptr->padding[1] = 0;
    #ifdef E32RCRAD_OBFUSCATE_ADDRS
    if (_salt != 0)
    {
        // obfuscate the header to look like randomized MACs
        // this is meant to prevent anybody sniffing from recognizing our activity
        ptr->addrs[0] = _rotl_u32(_uid, c);
        ptr->addrs[1] = _rotl_u32(~_uid, ~c);
        ptr->addrs[2] = _rotl_u32(_uid ^ _rotl_u32(_salt, c), c);
    }
    else // no security
    #endif
    {
        ptr->addrs[0] = _uid;
        ptr->addrs[1] = _uid;
        ptr->addrs[2] = _uid;
    }
}

void Esp32RcRadio::task(void)
{
    uint32_t now = millis();
    if (_is_tx == false)
    {
        if ((now - _last_time) >=
            #if E32RCRAD_TX_INTERV > 0
                (E32RCRAD_TX_INTERV * 3)
            #else
                100
            #endif
            )
        {
            // timeout waiting for packet, go to next channel just in case this one is completely useless
            _last_time = now;
            _timeout_cnt++;
            next_chan();
        }

        // prevent statistics overflow
        if (_stat_rx_total > 1000 || _stat_rx_good > 1000) {
            _stat_rx_total /= 2;
            _stat_rx_good   /= 2;
        }
    }
    else // _is_tx == true
    {
        if ((now - _last_time) >= E32RCRAD_TX_INTERV)
        {
            // send queued packet if enough time has passed
            tx();
            // _last_time will be set from inside
        }
    }
}

int Esp32RcRadio::available(void)
{
    task();
    return rx_flag ? E32RCRAD_PAYLOAD_SIZE : 0;
}

int Esp32RcRadio::read(uint8_t* data)
{
    task();
    if (rx_flag) // has data
    {
        if (data != NULL) {
            // copy to user buffer if available
            memcpy(data, buffer, E32RCRAD_PAYLOAD_SIZE);
        }
        rx_flag = false; // mark as read
        return E32RCRAD_PAYLOAD_SIZE; // report success
    }
    return -1; // report no data
}
